--- a/competitions/Style.css
+++ b/competitions/Style.css
@@ -1,3 +1,16 @@
+html body{
+  padding: 0% !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+/* body{
+  padding: 0% !important;
+  margin: 0% !important;
+  width: 100%;
+  height: 100%;
+} */
+
 .container{
     justify-content:center !important;
 }
@@ -27,6 +40,9 @@
 .inner-div:hover .social-icon {
     opacity: 1;
     top: 0;
+}
+.social-icon{
+  font-size: 2.5vh;
 }
 .inner-div:hover .front__face-photo, .inner-div:hover .front__footer {
     opacity: 0;
@@ -78,8 +94,8 @@
     margin: 0 auto;
     border-radius: 50%;
     border: 5px solid #fff;
-    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/156905/profile/profile-512.jpg?1530296477") no-repeat;
-    background-size: contain;
+    /* background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/156905/profile/profile-512.jpg?1530296477") center center no-repeat;
+    background-size: contain; */
     backface-visibility: hidden;
     overflow: hidden;
     transition: all 0.6s cubic-bezier(0.8, -0.4, 0.2, 1.7);
@@ -155,8 +171,8 @@
 .social-media-wrapper .social-icon {
     position: relative;
     top: 20px;
-    margin-left: 5px;
-    margin-right: 5px;
+    /* margin-left: 5px;
+    margin-right: 5px; */
     opacity: 0;
     color: #fff;
     transition: all 0.4s cubic-bezier(0.3, 0.7, 0.1, 1.9);
@@ -182,6 +198,12 @@
 .fab:hover {
     top: -5px;
 }
+.btn:hover{
+  background-color: #4facfe;
+  color: #071011;
+  box-shadow: 0 4px 8px 0 #4facfe, 0 6px 20px 0 #00f2fe;
+}
+
 .parallax {
     /* The image used */
     background-image: url("img/bg.jpg");
