--- a/techtalk/style.css
+++ b/techtalk/style.css
@@ -1,14 +1,14 @@
 * {
-  margin: 0;
-  padding: 0;
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
 }
-
-*,
-*:after,
-*:before {
-  box-sizing: border-box;
+*:before,
+*:after {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
 }
-
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -24,28 +24,6 @@ body {
   /*background-repeat: no-repeat;*/
   background-size: cover;
   /*background: linear-gradient(#e66465, #9198e5);*/
-}
-/*
-@media only screen and (orientation:portrait)
-{
-    #wrapper { display:none; }
-    #warning-message { display:block; color: white;}
-
-    html
-    {
-        background:url("https://images.unsplash.com/photo-1507275016429-544fc0875edd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1049&q=80") no-repeat center center fixed;
-        background-size: cover;
-    }       
-}*/
-
-body {
-  font-family: "Open Sans", sans-serif;
-  font-size: 100%;
-}
-
-ul li {
-  list-style-type: none;
-  font-size: 18px;
 }
 
 .glow {
@@ -68,128 +46,108 @@ ul li {
   }
 }
 
-.slider--teams {
-  position: relative;
-  top: 47%;
-  left: 50%;
-  max-width: 1000px;
-  opacity: 0;
-  transform: translate(-50%, -50%);
+.infocardContainer * {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 300;
+}
+h5 {
+  font-weight: 600; font-style: italic; font-family: "Fira Sans Condensed", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: #555566;
+}
+a:hover {
+  text-decoration: underline;
+}
+.infocardContainer {
+  display: flex;
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
+  background: rgb(0,159,255);
+  background: linear-gradient(121deg, rgba(255,255,255,0) 13%, rgba(0,159,255,1) 100%);
+  transition: all 500ms ease-in;
+  transition-delay: 1s;
+  margin: auto;
+  margin-top: 100px;
+  --margin-top: 100px;
+}
+.infocardContainer:hover{
+  width: 500px;
+  border-radius: 100px 10px 100px 100px;
+  transition: all 1s ease-out;
 }
 
-.slider--teams .slider--teams__team {
-  position: relative;
+.infocardContainer div {
+  text-color: white;
+  flex-shrink: 1;
+  width: 100%;
+  --background-color: green;
+}
+.infocardContainer div * {
+  display: flex;
+  --flex: inherit;
   overflow: hidden;
-  height: 600px;
-  /*background-color: black;*/
-}
-
-#list {
-  position: relative;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  transform: translate3d(0, 0, 0);
-}
-#list li {
-  position: relative;
-  display: inline-block;
-  float: left;
-  text-align: center;
-}
-#list li figure {
-  cursor: pointer;
-  height: 10px;
-  margin: 1em;
-  opacity: 0.5;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  transition: transform 450ms cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 450ms ease-in-out;
-  transform: scale(0.5) translateZ(0px);
-}
-#list li figure:hover {
-  opacity: 0.8;
-  transform: scale(0.6) translateZ(0px);
-}
-#list li figure:active {
-  opacity: 1;
-  transform: scale(0.7) translateZ(0px);
-}
-#list li figure > div {
-  /*border-radius: 5px;*/
-  position: relative;
-  margin: 2rem auto;
-  width: 160px;
-  height: 160px;
-  overflow: hidden;
-  transform: rotate(45deg) translateZ(0px);
-}
-#list li figure > div > div {
-  /*background: url('img/speakers_rs.png');/*url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/953/teams.jpg); /*no-repeat;*/
-  background-size: cover;
-  background-position: 0px 0px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 170px;
-  height: 170px;
-  transform: rotate(-45deg) translate(0%, -70%);
-}
-#list li figure figcaption h2 {
+  text-overflow: hidden;
+  --background-color: yellow;
   color: white;
-  font-size: 1.6rem;
-  font-weight: 800;
+  white-space: nowrap;
+  width: 0;
+  height: auto;
+  transition: all 450ms ease-in;
+  transition-delay: 1s;
 }
-#list li figure figcaption p {
-  color: #808080;
-  font-size: 0.9rem;
-  font-weight: 400;
-}
-#list li:nth-child(1) figure > div > div {
-  background-position: 0px 0px !important;
-}
-#list li:nth-child(2) figure > div > div {
-  background-position: 0px 20% !important;
-}
-#list li:nth-child(3) figure > div > div {
-  background-position: 0px 40% !important;
-}
-#list li:nth-child(4) figure > div > div {
-  background-position: 0px 60% !important;
-}
-#list li:nth-child(5) figure > div > div {
-  background-position: 0px 80% !important;
-}
-#list li:nth-child(6) figure > div > div {
-  background-position: 0px 100% !important;
+.infocardContainer:hover div *{
+  --background-color: purple;
+  display: flex;
+  visibility: visible;
+  transition: all 1s ease-out;
+  transition-delay: 500ms;
+  width: 100%;
+  height: auto;
 }
 
-.active {
-  opacity: 1 !important;
-  transform: scale(2) translateZ(0px) !important;
+.infocardContainer #main, .infocardContainer #main img{
+  --background-color: red;
+  height: 200px;
+  width: 200px;
+  padding-right: 10px;
+  border-radius: 100%;
+  flex-shrink: 0;
+  object-fit: cover;
 }
-
-.cf:before,
-.cf:after {
-  content: " ";
-  display: table;
+.infocardContainer #main img{
+  height: 180px;
+  width: 180px;
+  transition: none;
+  display: float;
+  position: relative;
+  border: 10px solid white;
+  margin: 0 0 0 0; padding: 0 0 0 0;
 }
-
-.cf:after {
-  clear: both;
+.infocardContainer #textbois {
+  position: relative;
 }
-
-.cf {
-  *zoom: 1;
+.infocardContainer #textbois #hotlinks {
+  max-width: 60%;
+  max-height: 30px;
+  
+  --background-color: white;
+  position:absolute;
+  bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 13px;
 }
-
-/* Demo Styles */
-#content {
-  margin: 0 auto;
-  padding-bottom: 50px;
-  width: 80%;
-  max-width: 978px;
+.infocardContainer #textbois #hotlinks * {
+  background-color: white;
+  max-width: 30px;
+  --margin: 0 1px 0 1px;
+  border-radius: 25px;
 }
-
 
 /* The Loader */
 #loader-wrapper {
