--- a/src/components/CardsContainer.css
+++ b/src/components/CardsContainer.css
@@ -32,27 +32,37 @@
   width: 50vw;
   object-fit: cover;
   position: relative;
+  filter: brightness(75%);
 }
 
 .card-li > .card-title {
+  width: 75%;
   font-family: "Poppins", sans-serif;
-  width: 100%;
   word-wrap: break-word;
   text-decoration: none;
   z-index: 10;
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 45%;
   transform: translate(-50%, -50%);
   color: transparent;
   -webkit-text-stroke: 2px #fff;
   font-size: 5vw;
   /* mix-blend-mode: exclusion; */
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: all 0.2s ease-in-out;
 }
 
-.card-li > .card-title:hover {
+/* .card-li > .card-title:hover {
+  color: #fff;
+} */
+
+.card-li > .card-coming-soon {
+  position: absolute;
+  left: 50%;
+  top: 63%;
+  transform: translate(-50%, -50%);
+  font-size: 1.2rem;
   color: #fff;
 }
 
