--- a/src/components/Competitions/Competitions.css
+++ b/src/components/Competitions/Competitions.css
@@ -175,7 +175,7 @@
   content: "";
   position: absolute;
   height: 5px;
-  background: #5ad67d;
+  background: #b7d9f3;
   width: 35px;
   top: -0.75rem;
   border-radius: 3px;
