--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -2,6 +2,18 @@
   color: #333;
 }
 
+.vertical-timeline-element-link {
+  text-decoration: underline;
+  color: #6891b1;
+  cursor: pointer;
+  font-size: 0.9rem;
+  transition: all 0.15s ease-in-out;
+}
+
+.vertical-timeline-element-link:hover {
+  color: #99aebe;
+}
+
 @media only screen and (max-width: 1169px) {
   .tl-date-active {
     color: #fff;
