week-2 events link added

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -4,7 +4,7 @@
 
 .vertical-timeline-element-link {
   text-decoration: underline;
-  color: #6891b1;
+  color: #88a6be;
   cursor: pointer;
   font-size: 0.9rem;
   transition: all 0.15s ease-in-out;
