--- a/src/components/Workshop/Workshop.css
+++ b/src/components/Workshop/Workshop.css
@@ -70,6 +70,7 @@
   height: 12rem;
   border-radius: 0.3rem;
   margin: 2rem 0;
+  position: relative;
 }
 
 .workshop-comp > .events > ul > li > .time {
@@ -83,7 +84,6 @@
   text-align: center;
   border-top-left-radius: 0.3rem;
   border-bottom-left-radius: 0.3rem;
-
   transition: 0.3s;
 }
 
@@ -111,7 +111,7 @@
 }
 
 .workshop-comp > .events > ul > li > .details {
-  padding: 0.8rem;
+  padding: 0.65rem 0.8rem;
   background: #fff;
   box-sizing: border-box;
   width: 70%;
@@ -123,33 +123,32 @@
   position: relative;
   margin: 0;
   padding: 0;
-  font-size: 22px;
+  font-size: 1.3rem;
   font-weight: 700;
 }
 
 .workshop-comp > .events > ul > li > .details > p {
   position: relative;
-  margin: 10px 0 0;
+  margin: 0.3rem 0 0.3rem;
   padding: 0;
-  font-size: 16px;
+  font-size: 0.93rem;
 }
 
 .workshop-comp > .events > ul > li > .details > a {
   display: inline-block;
   text-decoration: none;
-  padding: 0.2rem 1rem;
+  padding: 0.3rem 0.5rem;
   border: none;
-  margin-top: 15px;
-  font-size: 18px;
-  color: #3477aa;
-  transition: 0.3s;
+  font-size: 0.97rem;
+  background-color: #2c516e;
+  color: white;
+  transition: 0.15s;
   border-radius: 0.3rem;
 }
 
 .workshop-comp > .events > ul > li > .details > a:hover {
-  background-color: #0f4758;
-  color: white;
-  border-radius: 0.3rem;
+  background-color: #3477aa;
+  color: #fff;
 }
 
 @media (max-width: 991px) {
@@ -212,10 +211,11 @@
     float: none;
     padding-left: 100px;
     background: transparent;
+    position: relative;
   }
 
   .workshop-comp > .events ul li .details a {
-    padding: 5px 10px;
+    padding: 0.5rem;
   }
 }
 
