week-3 shark tank link

--- a/src/components/Competitions/Competitions.css
+++ b/src/components/Competitions/Competitions.css
@@ -133,27 +133,26 @@
   text-align: right;
 }
 .blog-card .description .read-more a {
-  color: #5ad67d;
+  color: #6caee0;
   display: inline-block;
   position: relative;
+  margin: 0 0.7rem;
 }
-.blog-card .description .read-more a:after {
-  content: "\f061";
-  font-family: FontAwesome;
-  margin-left: -10px;
-  opacity: 0;
+/* .blog-card .description .read-more a:after {
+  /* margin-left: -10px; */
+/* opacity: 0;
   vertical-align: middle;
-  transition: margin 0.3s, opacity 0.3s;
-}
-.blog-card .description .read-more a:hover:after {
-  margin-left: 5px;
+  transition: opacity 0.3s; */
+/* }  */
+
+.blog-card .description .read-more a:hover {
   opacity: 1;
+  color: #94d0ff;
 }
 
 #read-more-1,
 #read-more-2 {
   text-align: center;
-  color: #94d0ff;
 }
 
 #photo1 {
