--- a/src/components/Tech Talks/TechTalks.css
+++ b/src/components/Tech Talks/TechTalks.css
@@ -22,7 +22,7 @@
 }
 
 .speaker-card {
-  height: 20rem;
+  height: 23rem;
   width: 20rem;
   padding: 0.5rem;
   margin: 2rem 2rem;
@@ -76,10 +76,12 @@
   width: 150px;
   margin: 1rem 0;
 }
-.buttons .register-btn button {
+.buttons .register-btn a {
+  text-decoration: none;
   height: 100%;
   width: 100%;
-  background: #fff;
+  background: #b7d9f3;
+  color: #242a3d;
   border: none;
   outline: none;
   cursor: pointer;
@@ -87,9 +89,11 @@
   font-weight: 500;
   border-radius: 5px;
   transition: all 0.3s;
+  padding: 0.5rem;
 }
-.register-btn button:hover {
-  transform: scale(0.95);
+.register-btn a:hover {
+  background-color: #2c516e;
+  color: #fff;
 }
 .speaker-card .icons {
   position: relative;
