--- a/src/components/Tech Talks/TechTalks.css
+++ b/src/components/Tech Talks/TechTalks.css
@@ -97,7 +97,7 @@
 }
 .speaker-card .icons {
   position: relative;
-  margin-top: -260px;
+  margin-top: -340px;
   margin-left: 2px;
   list-style: none;
 }
@@ -150,7 +150,7 @@
     align-items: center;
   }
   .speaker-card {
-    height: 19rem;
+    height: 21rem;
     width: 95%;
     margin: 2rem 0;
     padding: 0.5rem 0.3rem;
@@ -179,7 +179,10 @@
     font-size: 0.85rem;
   }
   .speaker-card .icons {
-    margin-top: -250px;
+    margin-top: -310px;
     margin-left: 0;
+  }
+  .buttons .register-btn a {
+    font-size: 0.9rem;
   }
 }
