--- a/css/styles.css
+++ b/css/styles.css
@@ -1203,3 +1203,19 @@ time {
     transform: translateX(-50%) scale(1);
   }
 }
+
+.reel {
+  color: #489aff;
+  margin-top: 12px;
+  text-shadow: 0px 0px 20px #3c5ceb;
+  border: 3px solid var(--blue);
+  padding: 12px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-size: 24px;
+  transition: all 0.5s;
+}
+
+.reel:hover {
+  font-size: 32px;
+}
